--- a/quem-somos.html
+++ b/quem-somos.html
@@ -23,6 +23,21 @@
         <tr>
             <td colspan="2"> <h1>Sobre a universidade</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sodales leo vitae leo vehicula, vel elementum nulla imperdiet. Sed vel viverra justo, eget luctus ex. Nulla facilisi. Suspendisse vitae molestie lectus. Duis quam turpis, porttitor et ligula sit amet, egestas semper nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc commodo mi elementum quam efficitur, sit amet tempus purus iaculis. Praesent in lacus gravida, volutpat mi sed, mattis velit. Phasellus viverra ac metus ut tincidunt. Nullam ut molestie libero. Sed nunc turpis, mattis at est vel, eleifend porttitor tortor. Phasellus consequat lacus quis urna ultricies vestibulum. Phasellus vel diam consectetur, efficitur leo eu, gravida leo. Phasellus placerat, mi fringilla semper pretium, mi dui fringilla magna, eget laoreet odio nulla quis leo. Nulla tincidunt nibh vitae risus accumsan, ac tincidunt metus mollis.</p>
+
+                <h2> 5 Motivos para estudar</h2>
+
+                <ol>
+                    <li>Tables em sala de aula</li>
+                    <li>Materail sempre atualizado</li>
+                    <li>Prefessores renomados</li>
+                    <li>Universidade bem avaliada</li>
+                    <li>Ótima localização</li>
+                </ol>
+
+                <hr>
+
+                <ul><h2>Obejetivos </h2>
+
             
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sodales leo vitae leo vehicula, vel elementum nulla imperdiet. Sed vel viverra justo, eget luctus ex. Nulla facilisi. Suspendisse vitae molestie lectus. Duis quam turpis, porttitor et ligula sit amet, egestas semper nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc commodo mi elementum quam efficitur, sit amet tempus purus iaculis. Praesent in lacus gravida, volutpat mi sed, mattis velit. Phasellus viverra ac metus ut tincidunt. Nullam ut molestie libero. Sed nunc turpis, mattis at est vel, eleifend porttitor tortor. Phasellus consequat lacus quis urna ultricies vestibulum. Phasellus vel diam consectetur, efficitur leo eu, gravida leo. Phasellus placerat, mi fringilla semper pretium, mi dui fringilla magna, eget laoreet odio nulla quis leo. Nulla tincidunt nibh vitae risus accumsan, ac tincidunt metus mollis.</p>
             
